--- a/flights2015_analysis.ipynb
+++ b/flights2015_analysis.ipynb
@@ -165,8 +165,8 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>top</th>\n",
-       "      <td>NK</td>\n",
-       "      <td>Frontier Airlines Inc.</td>\n",
+       "      <td>DL</td>\n",
+       "      <td>Skywest Airlines Inc.</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>freq</th>\n",
@@ -178,11 +178,11 @@
        "</div>"
       ],
       "text/plain": [
-       "       iata_code                 airline\n",
-       "count         14                      14\n",
-       "unique        14                      14\n",
-       "top           NK  Frontier Airlines Inc.\n",
-       "freq           1                       1"
+       "       iata_code                airline\n",
+       "count         14                     14\n",
+       "unique        14                     14\n",
+       "top           DL  Skywest Airlines Inc.\n",
+       "freq           1                      1"
       ]
      },
      "execution_count": 9,
@@ -1814,7 +1814,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 90,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1823,7 +1823,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 91,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1833,26 +1833,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 93,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "merged_flights.drop(['iata_code_x', 'iata_code_y'], axis = 1, inplace = True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 95,
    "metadata": {},
    "outputs": [],
    "source": [
     "#rename columns kept.\n",
-    "merged_flights.rename(columns = dict(iata_code_x = 'iata_origin', latitude_x = 'lat_origin', longitude_x = 'lon_origin'), inplace = True)"
+    "merged_flights.rename(columns = dict(latitude_x = 'lat_origin', longitude_x = 'lon_origin'), inplace = True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 96,
    "metadata": {},
    "outputs": [],
    "source": [
-    "merged_flights.rename(columns = dict(iata_code_y = 'iata_dest', latitude_y = 'lat_dest', longitude_y = 'lon_dest'), inplace = True)"
+    "merged_flights.rename(columns = dict(latitude_y = 'lat_dest', longitude_y = 'lon_dest'), inplace = True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 97,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1861,32 +1870,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Index(['origin_airport', 'year', 'month', 'day', 'day_of_week',\n",
-       "       'flight_number', 'departure_delay', 'taxi_out', 'air_time', 'distance',\n",
-       "       'taxi_in', 'arrival_delay', 'diverted', 'cancelled', 'air_system_delay',\n",
-       "       'security_delay', 'airline_delay', 'late_aircraft_delay',\n",
-       "       'weather_delay', 'lat_origin', 'lon_origin', 'lat_dest', 'lon_dest'],\n",
-       "      dtype='object')"
-      ]
-     },
-     "execution_count": 45,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "by_airports.columns"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 99,
    "metadata": {
     "scrolled": true
    },
@@ -1924,7 +1908,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 100,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1933,7 +1917,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 101,
    "metadata": {},
    "outputs": [
     {
@@ -2043,7 +2027,7 @@
        "231        0.000000       1.018182            15.363636           0.00  "
       ]
      },
-     "execution_count": 48,
+     "execution_count": 101,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2054,7 +2038,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 102,
    "metadata": {
     "scrolled": false
    },
@@ -2085,7 +2069,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 103,
    "metadata": {},
    "outputs": [
     {
@@ -2153,7 +2137,7 @@
        "228  41.97960  -87.90446  "
       ]
      },
-     "execution_count": 50,
+     "execution_count": 103,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2171,7 +2155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 104,
    "metadata": {},
    "outputs": [
     {
@@ -2216,7 +2200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 105,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2225,7 +2209,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 106,
    "metadata": {},
    "outputs": [
     {
@@ -2255,7 +2239,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 107,
    "metadata": {
     "scrolled": true
    },
@@ -2304,7 +2288,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 108,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2313,7 +2297,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 109,
    "metadata": {},
    "outputs": [
     {
@@ -2322,7 +2306,7 @@
        "107847"
       ]
      },
-     "execution_count": 56,
+     "execution_count": 109,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2334,7 +2318,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 110,
    "metadata": {},
    "outputs": [
     {
@@ -2347,12 +2331,12 @@
        "       'scheduled_arrival', 'arrival_time', 'arrival_delay', 'diverted',\n",
        "       'cancelled', 'cancelled_reason', 'air_system_delay', 'security_delay',\n",
        "       'airline_delay', 'late_aircraft_delay', 'weather_delay', 'Date',\n",
-       "       'weekday', 'month_of_year', 'iata_origin', 'lat_origin', 'lon_origin',\n",
-       "       'iata_dest', 'lat_dest', 'lon_dest'],\n",
+       "       'weekday', 'month_of_year', 'lat_origin', 'lon_origin', 'lat_dest',\n",
+       "       'lon_dest'],\n",
        "      dtype='object')"
       ]
      },
-     "execution_count": 57,
+     "execution_count": 110,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2370,7 +2354,7 @@
     {
      "data": {
       "text/plain": [
-       "<seaborn.axisgrid.PairGrid at 0x7f7e5876f550>"
+       "<seaborn.axisgrid.PairGrid at 0x7f88c294e160>"
       ]
      },
      "execution_count": 58,
@@ -2394,11 +2378,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "# Train several models and use the best one to predict delay"
+   ]
   },
   {
    "cell_type": "code",
@@ -2753,7 +2737,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.collections.PathCollection at 0x7f7e589e0850>"
+       "<matplotlib.collections.PathCollection at 0x7f88cd0e2a60>"
       ]
      },
      "execution_count": 82,
@@ -2813,10 +2797,71 @@
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "code",
+   "execution_count": 116,
    "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "Int64Index: 5332914 entries, 0 to 5332913\n",
+      "Data columns (total 36 columns):\n",
+      " #   Column               Dtype         \n",
+      "---  ------               -----         \n",
+      " 0   year                 int64         \n",
+      " 1   month                int64         \n",
+      " 2   day                  int64         \n",
+      " 3   day_of_week          int64         \n",
+      " 4   airline              object        \n",
+      " 5   flight_number        int64         \n",
+      " 6   tail_number          object        \n",
+      " 7   origin_airport       object        \n",
+      " 8   destination_airport  object        \n",
+      " 9   scheduled_departure  object        \n",
+      " 10  departure_time       object        \n",
+      " 11  departure_delay      float64       \n",
+      " 12  taxi_out             float64       \n",
+      " 13  wheels_off           object        \n",
+      " 14  air_time             float64       \n",
+      " 15  distance             int64         \n",
+      " 16  wheels_on            object        \n",
+      " 17  taxi_in              float64       \n",
+      " 18  scheduled_arrival    object        \n",
+      " 19  arrival_time         object        \n",
+      " 20  arrival_delay        float64       \n",
+      " 21  diverted             int64         \n",
+      " 22  cancelled            int64         \n",
+      " 23  cancelled_reason     object        \n",
+      " 24  air_system_delay     float64       \n",
+      " 25  security_delay       float64       \n",
+      " 26  airline_delay        float64       \n",
+      " 27  late_aircraft_delay  float64       \n",
+      " 28  weather_delay        float64       \n",
+      " 29  Date                 datetime64[ns]\n",
+      " 30  weekday              object        \n",
+      " 31  month_of_year        object        \n",
+      " 32  lat_origin           float64       \n",
+      " 33  lon_origin           float64       \n",
+      " 34  lat_dest             float64       \n",
+      " 35  lon_dest             float64       \n",
+      "dtypes: datetime64[ns](1), float64(14), int64(8), object(13)\n",
+      "memory usage: 1.5+ GB\n"
+     ]
+    }
+   ],
    "source": [
-    "merged_flights.head()"
+    "merged_flights.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 111,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "merged_flights.to_csv('flight_dataset.csv')"
    ]
   },
   {
@@ -2828,7 +2873,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 112,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2837,7 +2882,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 113,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2846,7 +2891,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 114,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2863,6 +2908,15 @@
   {
    "cell_type": "raw",
    "metadata": {},
+   "source": [
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": []
   },
   {
