updated pipe1 to show charts in browser

--- a/flights2015_analysis.ipynb
+++ b/flights2015_analysis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 117,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 118,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 119,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 120,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 121,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 122,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -79,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 123,
    "metadata": {},
    "outputs": [
     {
@@ -88,7 +88,7 @@
        "Index(['iata_code', 'airline'], dtype='object')"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 123,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -99,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 124,
    "metadata": {},
    "outputs": [
     {
@@ -124,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 125,
    "metadata": {},
    "outputs": [
     {
@@ -185,7 +185,7 @@
        "freq           1                      1"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 125,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -196,7 +196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 126,
    "metadata": {},
    "outputs": [
     {
@@ -263,7 +263,7 @@
        "4        B6         JetBlue Airways"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 126,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -281,7 +281,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 127,
    "metadata": {},
    "outputs": [
     {
@@ -292,7 +292,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 127,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -303,7 +303,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 128,
    "metadata": {},
    "outputs": [
     {
@@ -333,7 +333,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 129,
    "metadata": {},
    "outputs": [
     {
@@ -437,7 +437,7 @@
        "4  31.53552  -84.19447  "
       ]
      },
-     "execution_count": 13,
+     "execution_count": 129,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -455,7 +455,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 130,
    "metadata": {},
    "outputs": [
     {
@@ -472,7 +472,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 130,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -483,7 +483,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 131,
    "metadata": {},
    "outputs": [
     {
@@ -2857,11 +2857,227 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 132,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>year</th>\n",
+       "      <th>month</th>\n",
+       "      <th>day</th>\n",
+       "      <th>day_of_week</th>\n",
+       "      <th>airline</th>\n",
+       "      <th>flight_number</th>\n",
+       "      <th>tail_number</th>\n",
+       "      <th>origin_airport</th>\n",
+       "      <th>destination_airport</th>\n",
+       "      <th>scheduled_departure</th>\n",
+       "      <th>...</th>\n",
+       "      <th>airline_delay</th>\n",
+       "      <th>late_aircraft_delay</th>\n",
+       "      <th>weather_delay</th>\n",
+       "      <th>Date</th>\n",
+       "      <th>weekday</th>\n",
+       "      <th>month_of_year</th>\n",
+       "      <th>lat_origin</th>\n",
+       "      <th>lon_origin</th>\n",
+       "      <th>lat_dest</th>\n",
+       "      <th>lon_dest</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2015</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>4</td>\n",
+       "      <td>AS</td>\n",
+       "      <td>98</td>\n",
+       "      <td>N407AS</td>\n",
+       "      <td>ANC</td>\n",
+       "      <td>SEA</td>\n",
+       "      <td>00:05:00</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>2015-01-01</td>\n",
+       "      <td>Thursday</td>\n",
+       "      <td>Jan</td>\n",
+       "      <td>61.17432</td>\n",
+       "      <td>-149.99619</td>\n",
+       "      <td>47.44898</td>\n",
+       "      <td>-122.30931</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2015</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>4</td>\n",
+       "      <td>AS</td>\n",
+       "      <td>108</td>\n",
+       "      <td>N309AS</td>\n",
+       "      <td>ANC</td>\n",
+       "      <td>SEA</td>\n",
+       "      <td>00:45:00</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>2015-01-01</td>\n",
+       "      <td>Thursday</td>\n",
+       "      <td>Jan</td>\n",
+       "      <td>61.17432</td>\n",
+       "      <td>-149.99619</td>\n",
+       "      <td>47.44898</td>\n",
+       "      <td>-122.30931</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2015</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>4</td>\n",
+       "      <td>DL</td>\n",
+       "      <td>1560</td>\n",
+       "      <td>N3743H</td>\n",
+       "      <td>ANC</td>\n",
+       "      <td>SEA</td>\n",
+       "      <td>00:45:00</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>2015-01-01</td>\n",
+       "      <td>Thursday</td>\n",
+       "      <td>Jan</td>\n",
+       "      <td>61.17432</td>\n",
+       "      <td>-149.99619</td>\n",
+       "      <td>47.44898</td>\n",
+       "      <td>-122.30931</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2015</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>4</td>\n",
+       "      <td>AS</td>\n",
+       "      <td>136</td>\n",
+       "      <td>N431AS</td>\n",
+       "      <td>ANC</td>\n",
+       "      <td>SEA</td>\n",
+       "      <td>01:35:00</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>2015-01-01</td>\n",
+       "      <td>Thursday</td>\n",
+       "      <td>Jan</td>\n",
+       "      <td>61.17432</td>\n",
+       "      <td>-149.99619</td>\n",
+       "      <td>47.44898</td>\n",
+       "      <td>-122.30931</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2015</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>4</td>\n",
+       "      <td>AS</td>\n",
+       "      <td>134</td>\n",
+       "      <td>N464AS</td>\n",
+       "      <td>ANC</td>\n",
+       "      <td>SEA</td>\n",
+       "      <td>01:55:00</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>2015-01-01</td>\n",
+       "      <td>Thursday</td>\n",
+       "      <td>Jan</td>\n",
+       "      <td>61.17432</td>\n",
+       "      <td>-149.99619</td>\n",
+       "      <td>47.44898</td>\n",
+       "      <td>-122.30931</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5 rows × 36 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   year  month  day  day_of_week airline  flight_number tail_number  \\\n",
+       "0  2015      1    1            4      AS             98      N407AS   \n",
+       "1  2015      1    1            4      AS            108      N309AS   \n",
+       "2  2015      1    1            4      DL           1560      N3743H   \n",
+       "3  2015      1    1            4      AS            136      N431AS   \n",
+       "4  2015      1    1            4      AS            134      N464AS   \n",
+       "\n",
+       "  origin_airport destination_airport scheduled_departure  ... airline_delay  \\\n",
+       "0            ANC                 SEA            00:05:00  ...           0.0   \n",
+       "1            ANC                 SEA            00:45:00  ...           0.0   \n",
+       "2            ANC                 SEA            00:45:00  ...           0.0   \n",
+       "3            ANC                 SEA            01:35:00  ...           0.0   \n",
+       "4            ANC                 SEA            01:55:00  ...           0.0   \n",
+       "\n",
+       "   late_aircraft_delay  weather_delay       Date   weekday  month_of_year  \\\n",
+       "0                  0.0            0.0 2015-01-01  Thursday            Jan   \n",
+       "1                  0.0            0.0 2015-01-01  Thursday            Jan   \n",
+       "2                  0.0            0.0 2015-01-01  Thursday            Jan   \n",
+       "3                  0.0            0.0 2015-01-01  Thursday            Jan   \n",
+       "4                  0.0            0.0 2015-01-01  Thursday            Jan   \n",
+       "\n",
+       "  lat_origin  lon_origin  lat_dest   lon_dest  \n",
+       "0   61.17432  -149.99619  47.44898 -122.30931  \n",
+       "1   61.17432  -149.99619  47.44898 -122.30931  \n",
+       "2   61.17432  -149.99619  47.44898 -122.30931  \n",
+       "3   61.17432  -149.99619  47.44898 -122.30931  \n",
+       "4   61.17432  -149.99619  47.44898 -122.30931  \n",
+       "\n",
+       "[5 rows x 36 columns]"
+      ]
+     },
+     "execution_count": 132,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "merged_flights.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 111,
    "metadata": {},
    "outputs": [],
    "source": [
-    "merged_flights.to_csv('flight_dataset.csv')"
+    "#merged_flights.to_csv('flight_dataset.csv')"
    ]
   },
   {
@@ -2873,7 +3089,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 133,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2882,7 +3098,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 134,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2891,7 +3107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 135,
    "metadata": {},
    "outputs": [],
    "source": [
